--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
+    "lucide-react": "^0.522.0",
     "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "next-mdx-remote": "5.0.0",
     "postcss": "^8.4.35",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sugar-high": "^0.6.0"
   },
   "devDependencies": {
