--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postcss": "^8.4.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sugar-high": "^0.6.0"
+    "sugar-high": "^0.6.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
