--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
+    "express": "^5.1.0",
     "lucide-react": "^0.522.0",
     "next": "15.3.3",
     "next-mdx-remote": "5.0.0",
