--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@projectstorm/react-diagrams": "^7.0.4",
+    "@lightenna/react-mermaid-diagram": "^1.0.21",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
     "express": "^5.1.0",
     "lucide-react": "^0.522.0",
+    "mdx-mermaid": "^2.0.3",
+    "mermaid": "^11.7.0",
     "next": "15.3.3",
     "next-mdx-remote": "5.0.0",
     "postcss": "^8.4.35",
