--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "rss-parser": "^3.13.0",
     "sugar-high": "^0.6.0",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.4"
+    "tw-animate-css": "^1.3.4",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
