--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
+    "jose": "^6.0.11",
     "lucide-react": "^0.522.0",
     "mermaid": "^11.7.0",
     "next": "15.3.3",
