--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.0.0",
     "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.8.2",
     "express": "^5.1.0",
     "jose": "^6.0.11",
     "lucide-react": "^0.522.0",
