--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mermaid": "^11.7.0",
     "next": "15.3.3",
     "next-mdx-remote": "5.0.0",
+    "nuqs": "^2.4.3",
     "pg": "^8.16.3",
     "postcss": "^8.4.35",
     "react": "^19.0.0",
