--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
+    "dev:scan": "USE_SCAN=1 next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "push": "npx drizzle-kit push",
